actualizacion power y actualizacion con memoria en front